src/main/java/com/example/NYA_calculation/error/GlobalExceptionHandler.java
package com.example.NYA_calculation.error;

import org.springframework.web.bind.annotation.ControllerAdvice;

@ControllerAdvice
public class GlobalExceptionHandler {
}
